# simple-registration

./: CMakeLists.txt  LICENSE.txt  README.md
CMake/: SuperBuild.cmake  rccppExternalProjectHelperMacros.cmake
CMake/CMakeExternals/: Boost.cmake  ChangeBoostLibsInstallNameForMac.cmake.in  Eigen.cmake  ITK.cmake
Code/: CMakeLists.txt
Code/HelloWorld/: CMakeLists.txt  HelloWorld.cc
Code/PointMatching/: CMakeLists.txt  Exceptions.cc  Exceptions.hpp  PointMatching.cc  PointMatching.hpp  PointMatchingCmd.cc  SurfaceBasedRegistration.cc  SurfaceBasedRegistration.hpp  SurfaceBasedRegistrationCmd.cc  Util.cc  Util.hpp
Testing/: CMakeLists.txt
Testing/HelloWorld/: CMakeLists.txt  HelloWorldTest.cc
Testing/PointBasedRegistrationData/: fixed.mps  fixed.txt  invalid_cloud.txt  matrix.4x4  moving.mps  moving.txt
Testing/PointMatching/: CMakeLists.txt  PointMatchingTest.cc
Testing/SurfaceBasedRegistrationData/: fran_cut.txt  fran_cut_transformed.txt
